force-app/main/default/objects/Student_Acadamic_Details__c/Student_Acadamic_Details__c.object-meta.xml
<CustomObject>
    <label>Student Acadamic Details</label>
    <nameField>
        <label>Register Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Acadamic Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>