force-app/main/default/objects/Student_Acadamic_Details__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Academic Year</label>
    <referenceTo>Academic_Year__c</referenceTo>
    <relationshipLabel>Student Acadamic Details</relationshipLabel>
    <relationshipName>Student_Acadamic_Details</relationshipName>
    <type>Lookup</type>
</CustomField>