force-app/main/default/objects/Student_Acadamic_Details__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Student Acadamic Details</relationshipLabel>
    <relationshipName>Student_Acadamic_Details</relationshipName>
    <type>Lookup</type>
</CustomField>